fix: resolve CORS issues for deployment on Render and Vercel